--- a/Atividades/exercicios/exercicio-02/pages/perfil/perfil.css
+++ b/Atividades/exercicios/exercicio-02/pages/perfil/perfil.css
@@ -23,11 +23,9 @@
 }
 
 .container .container-perfil {
-
     display: flex;
     font-family: 'Playball';
-    font-size: 30px;
-    align-items: center;
+    font-size: 50px;
     justify-content: center;
 }
 
@@ -64,9 +62,19 @@
 
 @media (max-width: 900px){
 
-    
+
+.container header {
+
+    display: flex;
+    flex-wrap: wrap; 
+}
+
 .container header a{
-    font-size:100%;  
+    font-size:120%;  
+}
+
+.container header a + a + a{
+    margin-top: 10px;
 }
 
 .container .container-dados{
@@ -77,7 +85,9 @@
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     margin-left: 0px;
+    margin-top: -50px;
 }
+
 
 
 }
