Implementação 04 - escada e exerc. 4 - api

--- a/Atividades/atividade-pratica-01/03-calculadora/03-calculadora.css
+++ b/Atividades/atividade-pratica-01/03-calculadora/03-calculadora.css
@@ -13,7 +13,12 @@
     border: none;
     width: 100%;
     resize: none;
+    margin-left: 20px;
     
+}
+
+input{
+    font-weight: bold;
 }
 
 hr{
